--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "In this tutorial we illustrate how to add **Reinforcement Learning** (**RL**) to a simple **Neural Network**. Specifically, we illustrate how to add the **Policy Gradients** **RL** method to a **Neural Network** that is designed to help us decide where to go eat fries, either **'Squatch's Fry Shack** or **Norm's Fry Hut**, based on how hungry we are. If we are very hungry, than we will want to go to the place that has a high probability of giving us a large order of fries. However, if we are not very hungry, we want to go to the place that has a low probability of giving us a large order of fries.\n",
     "\n",
-    "![The neural network we will implement](images/nn_plus_fries.png)\n",
+    "<img src=\"./images/nn_plus_fries.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">\n",
     "\n",
     "**NOTE:** To make this example a little bit interesting, there is a **20%** chance that **'Squatch** will give us a large order of fries and an **80%** chance that **Norm** will give us a large order of fries."
    ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "363763f5-3b4b-454f-a10c-ec9f78c921cf",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c8be4198-3295-459f-a678-d1e139c1c33d",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
    "source": [
     "# Create a simple Neural Network with a trainable Bias\n",
     "\n",
-    "![the neural network that we will implement](images/just_nn.png)"
+    "<img src=\"./images/just_nn.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f62a91bc-fead-4af1-b4bf-494a7840d059",
    "metadata": {},
    "outputs": [],
@@ -275,18 +275,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "84029290-4e90-4b7f-9b3c-ac85038f1a48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = simpleNN_with_RL()"
    ]
@@ -301,21 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "2a939a19-0424-4ebc-a161-8f1b66a377be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1., grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -332,21 +313,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "b8b523bc-f87c-438f-b916-575ec5125bfe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.8808, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -377,51 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "043b59f1-e788-4e90-bc94-cb200532ac3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n",
-      "GPU available: True (mps), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "\n",
-      "  | Name         | Type | Params | Mode\n",
-      "---------------------------------------------\n",
-      "  | other params | n/a  | 1      | n/a \n",
-      "---------------------------------------------\n",
-      "1         Trainable params\n",
-      "0         Non-trainable params\n",
-      "1         Total params\n",
-      "0.000     Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7aa9e5d48f8445e588b4da6c69eca676",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: |                                               | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=70` reached.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = simpleNN_with_RL()\n",
     "trainer = L.Trainer(max_epochs=70)\n",
@@ -438,21 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "1c81839d-d026-4694-8a7a-f20f4d129002",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.9995, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -469,21 +387,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "0fc53d3e",
+   "execution_count": null,
+   "id": "eb54f6e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0002, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -508,18 +415,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "48765b1a-cc77-4517-91c4-779bc7aef44d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bias tensor(-10.3400)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, param in model.named_parameters():\n",
     "    print(name, torch.round(param.data, decimals=2))"
