--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -50,10 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "363763f5-3b4b-454f-a10c-ec9f78c921cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import torch ## torch let's us create tensors and also provides helper functions\n",
     "import torch.nn as nn ## torch.nn gives us nn.Module(), nn.Embedding() and nn.Linear()\n",
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c8be4198-3295-459f-a678-d1e139c1c33d",
    "metadata": {},
    "outputs": [],
@@ -113,6 +122,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee3845d2-7b41-493b-b7b3-83e75d45a7d7",
+   "metadata": {},
+   "source": [
+    "Now that we have a dataloader, we can create the neural network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d698d120-c55c-4250-8b08-8780cff8a39d",
    "metadata": {},
    "source": [
@@ -124,9 +141,7 @@
    "id": "67dc5a58-4ace-4c07-aca8-fb782dfdffd0",
    "metadata": {},
    "source": [
-    "# Create a simple Neural Network with a trainable Bias\n",
-    "\n",
-    "<img src=\"./images/just_nn.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">"
+    "# Create a simple Neural Network with a trainable Bias"
    ]
   },
   {
@@ -134,12 +149,14 @@
    "id": "a532d408-1630-456d-af2b-58babddc9b16",
    "metadata": {},
    "source": [
-    "Because the goal is to illustrate how to add **Reinforcement Learning** to a neural network, and not how to create a really fancy neural network, we're going to use an incredibly simple neural network that has a single trainable parameter, a **Bias** term. And we'll use **Reinforcement Learning** to train that one **Bias**. That said, the method easily extends as many parameters we need to train if we, ultimately, create a fancy neural network."
+    "Because the goal is to illustrate how to add **Reinforcement Learning** to a neural network, and not how to create a really fancy neural network, we're going to use an incredibly simple neural network that has a single trainable parameter, a **Bias** term. And we'll use **Reinforcement Learning** to train that one **Bias**. That said, the method easily extends as many parameters we need to train if we, ultimately, create a fancy neural network.\n",
+    "\n",
+    "<img src=\"./images/just_nn.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f62a91bc-fead-4af1-b4bf-494a7840d059",
    "metadata": {},
    "outputs": [],
@@ -184,7 +201,14 @@
     "        ## Take a step during gradient descent with policy gradients.\n",
     "\n",
     "        ## First, decide how hungry we are...\n",
-    "        how_hungry = torch.rand(1).to(\"mps\")\n",
+    "        ## NOTE: if we were not forcing all of the training\n",
+    "        ##       to take place on a CPU, then we would need\n",
+    "        ##       to move how_hungry to the GPU or whatever\n",
+    "        ##       we are using to accelerate training. We\n",
+    "        ##       can do that by adding .to(\"gpu\"), or .to(\"mps\") on a mac,\n",
+    "        ##       to the value like this: torch.rand(1).to(\"gpu\")\n",
+    "        #how_hungry = torch.rand(1).to(\"mps\")\n",
+    "        how_hungry = torch.rand(1)\n",
     "        \n",
     "        ## Now pass how_hungry through the neural network to get a probability\n",
     "        ## for going to Norm's.\n",
@@ -195,7 +219,11 @@
     "        \n",
     "        ## now figure out if we go to Norm's or Squatch's\n",
     "        ## by picking a random number between 0 and 1...\n",
-    "        rand_num = torch.rand(1).to(\"mps\")\n",
+    "        ## NOTE: We would need to move rand_num to the \n",
+    "        ##       accelerator as well (if we were not forcing\n",
+    "        ##       all training on the CPU)\n",
+    "        #rand_num = torch.rand(1).to(\"mps\")\n",
+    "        rand_num = torch.rand(1)\n",
     "        # print(\"rand_num:\", rand_num)\n",
     "\n",
     "        ## ...and then comparing that number to the output\n",
@@ -275,10 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "84029290-4e90-4b7f-9b3c-ac85038f1a48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 42\n"
+     ]
+    }
+   ],
    "source": [
     "model = simpleNN_with_RL()"
    ]
@@ -293,10 +329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2a939a19-0424-4ebc-a161-8f1b66a377be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1., grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -313,10 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b8b523bc-f87c-438f-b916-575ec5125bfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.8808, grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -347,13 +405,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "043b59f1-e788-4e90-bc94-cb200532ac3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 42\n",
+      "GPU available: True (mps), used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/trainer/setup.py:177: GPU available but not used. You can set it by doing `Trainer(accelerator='gpu')`.\n",
+      "\n",
+      "  | Name         | Type | Params | Mode\n",
+      "---------------------------------------------\n",
+      "  | other params | n/a  | 1      | n/a \n",
+      "---------------------------------------------\n",
+      "1         Trainable params\n",
+      "0         Non-trainable params\n",
+      "1         Total params\n",
+      "0.000     Total estimated model params size (MB)\n",
+      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:424: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n",
+      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/loops/fit_loop.py:298: The number of training batches (4) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74df4ea97a514f6abd4e8192e82e4d51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: |                                               | 0/? [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=70` reached.\n"
+     ]
+    }
+   ],
    "source": [
     "model = simpleNN_with_RL()\n",
-    "trainer = L.Trainer(max_epochs=70)\n",
+    "trainer = L.Trainer(max_epochs=70, accelerator=\"cpu\")\n",
     "trainer.fit(model, train_dataloaders=dataloader)"
    ]
   },
@@ -367,10 +469,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1c81839d-d026-4694-8a7a-f20f4d129002",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.9995, grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -387,10 +500,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eb54f6e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.0002, grad_fn=<SigmoidBackward0>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -415,10 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "48765b1a-cc77-4517-91c4-779bc7aef44d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bias tensor(-10.3400)\n"
+     ]
+    }
+   ],
    "source": [
     "for name, param in model.named_parameters():\n",
     "    print(name, torch.round(param.data, decimals=2))"
