--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -23,11 +23,13 @@
    "id": "76e6f01f-e856-42d6-bcc4-9a5c844fda94",
    "metadata": {},
    "source": [
-    "In this tutorial we illustrate how to add **Reinforcement Learning** (**RL**) to a simple **Neural Network**. Specifically, we illustrate how to add the **Policy Gradients** **RL** method to a **Neural Network** that is designed to help us decide where to go eat fries, either **'Squatch's Fry Shack** or **Norm's Fry Hut**, based on how hungry we are. If we are very hungry, than we will want to go to the place that has a high probability of giving us a large order of fries. However, if we are not very hungry, we want to go to the place that has a low probability of giving us a large order of fries.\n",
+    "In this tutorial we illustrate how to add **Reinforcement Learning** (**RL**) to a simple **Neural Network**. Specifically, we illustrate how to add the **Policy Gradients** **RL** method to a **Neural Network** that is designed to help us decide where to go eat fries, either **'Squatch's Fry Shack** or **Norm's Fry Hut**, based on how hungry we are. If we are very hungry, than we will want to go to the place that has a high probability of giving us a large order of fries. However, if we are not very hungry, we want to go to the place that has a low probability of giving us a large order of fries. Also, to a little bit interesting, there is a **20%** chance that **'Squatch** will give us a large order of fries and an **80%** chance that **Norm** will give us a large order of fries. \n",
     "\n",
-    "<img src=\"./images/nn_plus_fries.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">\n",
+    "This example is based on the StatQuest videos: \n",
+    "- **[Reinforcement Learning with Neural Networks: Essential Concepts!!!](https://youtu.be/9hbQieQh7-o)**\n",
+    "- **[Reinforcement Learning with Neural Networks: Mathematical Details](https://youtu.be/DVGmsnxB2UQ)**\n",
     "\n",
-    "**NOTE:** To make this example a little bit interesting, there is a **20%** chance that **'Squatch** will give us a large order of fries and an **80%** chance that **Norm** will give us a large order of fries."
+    "<img src=\"./images/nn_plus_fries.png\" alt=\"the neural network that we will implement\" style=\"width: 800px;\">"
    ]
   },
   {
@@ -45,24 +47,15 @@
    "source": [
     "# Import the modules that will do all the work\n",
     "\n",
-    "The very first thing we need to do is load a bunch of Python modules. Python itself is just a basic programming language. These modules give us extra functionality to generate random numbers and draw fancy graphs."
+    "The very first thing we need to do is load a bunch of Python modules. Python itself is just a basic programming language. These modules give us extra functionality to generate random numbers and create and train a neural network."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "363763f5-3b4b-454f-a10c-ec9f78c921cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch ## torch let's us create tensors and also provides helper functions\n",
     "import torch.nn as nn ## torch.nn gives us nn.Module(), nn.Embedding() and nn.Linear()\n",
@@ -103,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c8be4198-3295-459f-a678-d1e139c1c33d",
    "metadata": {},
    "outputs": [],
@@ -156,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f62a91bc-fead-4af1-b4bf-494a7840d059",
    "metadata": {},
    "outputs": [],
@@ -303,18 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "84029290-4e90-4b7f-9b3c-ac85038f1a48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = simpleNN_with_RL()"
    ]
@@ -329,21 +314,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2a939a19-0424-4ebc-a161-8f1b66a377be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1., grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -360,21 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b8b523bc-f87c-438f-b916-575ec5125bfe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.8808, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -405,54 +368,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "043b59f1-e788-4e90-bc94-cb200532ac3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Seed set to 42\n",
-      "GPU available: True (mps), used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/trainer/setup.py:177: GPU available but not used. You can set it by doing `Trainer(accelerator='gpu')`.\n",
-      "\n",
-      "  | Name         | Type | Params | Mode\n",
-      "---------------------------------------------\n",
-      "  | other params | n/a  | 1      | n/a \n",
-      "---------------------------------------------\n",
-      "1         Trainable params\n",
-      "0         Non-trainable params\n",
-      "1         Total params\n",
-      "0.000     Total estimated model params size (MB)\n",
-      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/trainer/connectors/data_connector.py:424: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=7` in the `DataLoader` to improve performance.\n",
-      "/Users/joshstarmer/Library/Python/3.9/lib/python/site-packages/lightning/pytorch/loops/fit_loop.py:298: The number of training batches (4) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74df4ea97a514f6abd4e8192e82e4d51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Training: |                                               | 0/? [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=70` reached.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = simpleNN_with_RL()\n",
     "trainer = L.Trainer(max_epochs=70, accelerator=\"cpu\")\n",
@@ -469,21 +388,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1c81839d-d026-4694-8a7a-f20f4d129002",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.9995, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.9))"
    ]
@@ -500,21 +408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "eb54f6e5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.0002, grad_fn=<SigmoidBackward0>)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model(torch.tensor(0.1))"
    ]
@@ -539,18 +436,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "48765b1a-cc77-4517-91c4-779bc7aef44d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bias tensor(-10.3400)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for name, param in model.named_parameters():\n",
     "    print(name, torch.round(param.data, decimals=2))"
