--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -53,6 +53,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acfe188c-92a7-4504-8dd7-6e03b05ed804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "# %%capture prevents this cell from printing a ton of STDERR stuff to the screen\n",
+    "\n",
+    "## NOTE: If you **don't** need to install anything, you can comment out the\n",
+    "##       next line.\n",
+    "##\n",
+    "##       If you **do** need to install something, just know that you may need to\n",
+    "##       restart your session for python to find the new module(s).\n",
+    "##\n",
+    "##       To restart your session:\n",
+    "##       - In Google Colab, click on the \"Runtime\" menu and select\n",
+    "##         \"Restart Session\" from the pulldown menu\n",
+    "##       - In a local jupyter notebook, click on the \"Kernel\" menu and select\n",
+    "##         \"Restart Kernel\" from the pulldown menu\n",
+    "##\n",
+    "##       Also, installing can take a few minutes, so go get yourself a snack!\n",
+    "!pip install lightning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "363763f5-3b4b-454f-a10c-ec9f78c921cf",
    "metadata": {},
    "outputs": [],
