--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -73,7 +73,7 @@
     "##         \"Restart Kernel\" from the pulldown menu\n",
     "##\n",
     "##       Also, installing can take a few minutes, so go get yourself a snack!\n",
-    "!pip install lightning"
+    "!pip install tensorflow lightning"
    ]
   },
   {
@@ -353,7 +353,7 @@
    "id": "8b00328e-d121-452b-b5b0-b2e0c2e43268",
    "metadata": {},
    "source": [
-    "The output, **0.9995**, means there is a high probability that we will go to **Norm's** to get fries. This makes sense because we are hungry (the input was **0.9**) and there a good chance that **Norm** will give us a large order of fries.\n",
+    "The output, which is close to **1**, means there is a high probability that we will go to **Norm's** to get fries. This makes sense because we are hungry (the input was **0.9**) and there a good chance that **Norm** will give us a large order of fries.\n",
     "\n",
     "Now let's run a relatively small input value, **0.1**, thorugh the neural network. A relatively small input value (a value close to **0**) indicates that we are not hungry and would like to go somewhere that has a good chance of serving us a small order of fries."
    ]
@@ -447,7 +447,7 @@
    "id": "8e9d7543-c8ee-4f39-88df-450f0131ec6f",
    "metadata": {},
    "source": [
-    "Unlike before we trained the model, now the output is close to 0, meaning there is low probability that we will go to Norm's. This means there is a high probabilty that we will go to 'Squatch's. And that makes sense, because there is a good chance that 'Squatch will eat most of the fries and only give us a small order. This means we will not waste any fries, and that is a good thing!\n",
+    "Unlike before we trained the model, now the output is close to **0**, meaning there is low probability that we will go to Norm's. This means there is a high probabilty that we will go to 'Squatch's. And that makes sense, because there is a good chance that 'Squatch will eat most of the fries and only give us a small order. This means we will not waste any fries, and that is a good thing!\n",
     "\n",
     "## DOUBLE BAM!!"
    ]
@@ -473,11 +473,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16a630d-a55a-43eb-9a85-9fdf4f4df097",
+   "id": "cc2eac20-f2a6-4e5b-bb22-82811e1ce6eb",
    "metadata": {},
    "source": [
-    "That value, **-10.3**, is very close to the ideal value, **-10**, and that means that **Reinforcement Learning** successfully trained the model.\n",
+    "That value, **-10.3**, is very close to the ideal value, **-10**, and that means that **Reinforcement Learning** successfully trained the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3aa7983-5d13-4183-bc66-2239c8c68b88",
+   "metadata": {},
+   "source": [
+    "Lastly, we can also use TensorBoard to see if we have minimized the overall loss of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "774162a1-5a2d-421d-bc22-187ef5ba1cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the TensorBoard notebook extension\u001b[39;00m\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mload_ext\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtensorboard\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mos\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the TensorBoard notebook extension\n",
+    "%load_ext tensorboard\n",
     "\n",
+    "import tensorflow as tf\n",
+    "import datetime, os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49419cf7-e914-4db2-9be3-9b630e157aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir=lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76a64bcd-0caf-4b57-bf0c-dbd7284dac63",
+   "metadata": {},
+   "source": [
     "# TRIPLE BAM!!!"
    ]
   }
