--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "# %%capture prevents this cell from printing a ton of STDERR stuff to the screen\n",
+    "## %%capture prevents this cell from printing a ton of STDERR stuff to the screen\n",
     "\n",
     "## NOTE: If you **don't** need to install anything, you can comment out the\n",
     "##       next line.\n",
@@ -73,7 +73,7 @@
     "##         \"Restart Kernel\" from the pulldown menu\n",
     "##\n",
     "##       Also, installing can take a few minutes, so go get yourself a snack!\n",
-    "!pip install tensorflow lightning"
+    "!pip install lightning"
    ]
   },
   {
@@ -286,9 +286,11 @@
     "\n",
     "        ## Now that we have visited either Norm or 'Squatch and ordered fries,\n",
     "        ## we can calculate the loss.\n",
+    "        ##\n",
     "        ## NOTE: We're using cross entropy which is...\n",
     "        ## CE_squatch = -1 * log(1-output) * gamma * reward\n",
     "        ## CE_norm = -1 * log(output) * gamma * reward\n",
+    "        ##    For details on these equations, see: https://youtu.be/DVGmsnxB2UQ\n",
     "        ## When pytorch calculates the derivative of the cross entropy\n",
     "        ## the scaled reward still have the desired effect.\n",
     "        loss = -1 * torch.log(outputs) * self.gamma * self.reward\n",
@@ -395,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043b59f1-e788-4e90-bc94-cb200532ac3c",
+   "id": "49c55bd6-c469-413b-8fb4-002435923269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,50 +479,6 @@
    "metadata": {},
    "source": [
     "That value, **-10.3**, is very close to the ideal value, **-10**, and that means that **Reinforcement Learning** successfully trained the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3aa7983-5d13-4183-bc66-2239c8c68b88",
-   "metadata": {},
-   "source": [
-    "Lastly, we can also use TensorBoard to see if we have minimized the overall loss of the model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "774162a1-5a2d-421d-bc22-187ef5ba1cf6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the TensorBoard notebook extension\u001b[39;00m\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mload_ext\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtensorboard\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
-   "source": [
-    "# Load the TensorBoard notebook extension\n",
-    "%load_ext tensorboard\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import datetime, os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49419cf7-e914-4db2-9be3-9b630e157aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%tensorboard --logdir=lightning_logs/"
    ]
   },
   {
