--- a/simple_nn_with_rl.ipynb
+++ b/simple_nn_with_rl.ipynb
@@ -47,33 +47,9 @@
    "source": [
     "# Import the modules that will do all the work\n",
     "\n",
-    "The very first thing we need to do is load a bunch of Python modules. Python itself is just a basic programming language. These modules give us extra functionality to generate random numbers and create and train a neural network."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acfe188c-92a7-4504-8dd7-6e03b05ed804",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "## %%capture prevents this cell from printing a ton of STDERR stuff to the screen\n",
+    "The very first thing we need to do is load a bunch of Python modules. Python itself is just a basic programming language. These modules give us extra functionality to generate random numbers and create and train a neural network.\n",
     "\n",
-    "## NOTE: If you **don't** need to install anything, you can comment out the\n",
-    "##       next line.\n",
-    "##\n",
-    "##       If you **do** need to install something, just know that you may need to\n",
-    "##       restart your session for python to find the new module(s).\n",
-    "##\n",
-    "##       To restart your session:\n",
-    "##       - In Google Colab, click on the \"Runtime\" menu and select\n",
-    "##         \"Restart Session\" from the pulldown menu\n",
-    "##       - In a local jupyter notebook, click on the \"Kernel\" menu and select\n",
-    "##         \"Restart Kernel\" from the pulldown menu\n",
-    "##\n",
-    "##       Also, installing can take a few minutes, so go get yourself a snack!\n",
-    "!pip install lightning"
+    "**NOTE:** The code below will check and see if **Lightning** is installed, and if not, it will install it for you. However, if you also need to install PyTorch, check out there install page **[here.](https://pytorch.org/get-started/locally/)**"
    ]
   },
   {
@@ -83,6 +59,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## First, check to see if lightning is installed, if not, install it.\n",
+    "import pip\n",
+    "try:\n",
+    "  __import__(\"lightning\")\n",
+    "except ImportError:\n",
+    "  pip.main(['install', \"lightning\"])\n",
+    "\n",
     "import torch ## torch let's us create tensors and also provides helper functions\n",
     "import torch.nn as nn ## torch.nn gives us nn.Module(), nn.Embedding() and nn.Linear()\n",
     "import torch.nn.functional as F # This gives us sigmoid()???\n",
